WifiStationExample/build/log/idf_py_stderr_output_20514
/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c: In function 'Task1_blink_Led':
/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c:43:5: error: implicit declaration of function 'GPIO_SET_DIRECTION' [-Wimplicit-function-declaration]
   43 |     GPIO_SET_DIRECTION(LED_PIN_1, GPIO_MODE_OUTPUT);
      |     ^~~~~~~~~~~~~~~~~~
/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c:46:9: error: called object is not a function or function pointer
   46 |         GPIO_MODE_OUTPUT(LED_PIN_1, 1);
      |         ^~~~~~~~~~~~~~~~
/home/ramin/Documents/learningCodeForESP32/WifiStationExample/main/main.c:50:9: error: called object is not a function or function pointer
   50 |         GPIO_MODE_OUTPUT(LED_PIN_1, 0);
      |         ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7064: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
